--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,27 +12,57 @@
     </div>
     <div class="content-section bg-white no-padding">
         <div class="title-section text-center">{{sectionSachHot.title}}</div>
-        <ul class="nav nav-pills nav-fill align-items-center" style="padding:5px">
-            {{#each sectionSachHot.list_categories}}
-            {{#if @first}}
-            <li class="nav-item">
-                <a class="nav-link active-modified-list-cs" href="#">
-                    {{this}}
-                </a>
-            </li>
-            {{else}}
-            <li class="nav-item">
-                <a class="nav-link text-dark" href="#">
-                    {{this}}
-                </a>
-            </li>
-            {{/if}}
-            {{/each}}
-            <li class="nav-item text-right">
-                <img src="/images/icon-more-list-field.png" alt="" style="height: 20px;">
-            </li>
-        </ul>
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                {{#each sectionSachHot.list_categories}}
+                {{#if @first}}
+                <div class="carousel-item active">
+                    <ul class="nav nav-pills nav-fill align-items-center" style="padding:5px">
+                        {{#each this}}
+                        {{#if @first}}
+                        <li class="nav-item col-sm-2  ">
+                            <a class="nav-link active-modified-list-cs" href="#">
+                                {{this}}
+                            </a>
+                        </li>
+                        {{else}}
+                        <li class="nav-item col-sm-2 ">
+                            <a class="nav-link text-dark" href="#">
+                                {{this}}
+                            </a>
+                        </li>
+                        {{/if}}
+                        {{/each}}
+                    </ul>
+                </div>
+                {{else}}
+                <div class="carousel-item">
+                    <ul class="nav nav-pills nav-fill align-items-center" style="padding:5px">
+                        {{#each this}}
+                        <li class="nav-item col-sm-2 ">
+                            <a class="nav-link text-dark" href="#">
+                                {{this}}
+                            </a>
+                        </li>
+
+                        {{/each}}
+                    </ul>
+                </div>
+                {{/if}}
+                {{/each}}
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        {{!Carousel book list}}
+        <div id="carousel_booklist" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 {{#each sectionSachHot.books}}
                 <div class="carousel-item {{#if @first}} active {{/if}} ">
@@ -56,11 +86,11 @@
                 </div>
                 {{/each}}
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#carousel_booklist" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#carousel_booklist" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
@@ -68,6 +98,7 @@
 
 
     </div>
+
     <div class="content-section bg-white no-padding">
         <div class="title-section text-center">{{sectionTinTuc.title}}</div>
         <div class="row">
@@ -136,7 +167,3 @@
     </div>
 </div>
 <script src="/function/change-nav.js" current_page="Trang chủ"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-<script src="/function/shrink-carousel-sm.js"></script>
