--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
     </div>
     <div class="content-section bg-white no-padding">
         <div class="title-section text-center">{{sectionSachHot.title}}</div>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div id="carousel_list_specialize" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 {{#each sectionSachHot.list_categories}}
                 {{#if @first}}
@@ -51,11 +51,11 @@
                 {{/if}}
                 {{/each}}
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#carousel_list_specialize" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#carousel_list_specialize" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
