--- a/views/storage.hbs
+++ b/views/storage.hbs
@@ -13,151 +13,131 @@
     {{!section sách hot}}
     <div class="content-section bg-white no-padding">
         <div class="title-section text-center">{{sectionSachHot.title}}</div>
-
-        <a href="/book-detail" style="color:inherit">
-            <div class="row justify-content-around">
+        <div id="carousel_booklist_hot" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
                 {{#each sectionSachHot.books}}
-                <div class="card" style="width: 200px; border:none;">
-                    <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
-                    <div class="card-body" style="padding:10px">
-
-                        <p class="card-text" style="margin: 0;">
-                            {{this.name}}
-                        </p>
-                        <p class="card-text" style="margin: 0;">
-                            {{this.author}}
-                        </p>
-                        <p class="card-text align-items-center d-flex" style="margin: 0;">
-                            {{this.views}} lượt xem
-                        </p>
-                    </div>
-                </div>
-                <div class="card" style="width: 200px; border:none;">
-                    <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
-                    <div class="card-body" style="padding:10px">
-
-                        <p class="card-text" style="margin: 0;">
-                            {{this.name}}
-                        </p>
-                        <p class="card-text" style="margin: 0;">
-                            {{this.author}}
-                        </p>
-                        <p class="card-text align-items-center d-flex" style="margin: 0;">
-                            {{this.views}} lượt xem
-                        </p>
-                    </div>
-                </div>
-                <div class="card" style="width: 200px; border:none;">
-                    <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
-                    <div class="card-body" style="padding:10px">
-
-                        <p class="card-text" style="margin: 0;">
-                            {{this.name}}
-                        </p>
-                        <p class="card-text" style="margin: 0;">
-                            {{this.author}}
-                        </p>
-                        <p class="card-text align-items-center d-flex" style="margin: 0;">
-                            {{this.views}} lượt xem
-                        </p>
-                    </div>
-                </div>
-                <div class="card" style="width: 200px; border:none;">
-                    <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
-                    <div class="card-body" style="padding:10px">
-
-                        <p class="card-text" style="margin: 0;">
-                            {{this.name}}
-                        </p>
-                        <p class="card-text" style="margin: 0;">
-                            {{this.author}}
-                        </p>
-                        <p class="card-text align-items-center d-flex" style="margin: 0;">
-                            {{this.views}} lượt xem
-                        </p>
-                    </div>
+                <div class="carousel-item {{#if @first}} active {{/if}} ">
+                    <a href="/book-detail" style="color: inherit;">
+                        <div class="row justify-content-around">
+                            {{#each this}}
+                            <div class="card col-md-2 col" style=" border:none;">
+                                <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
+                                <div class="card-body" style="padding:10px">
+                                    <p class="card-text" style="margin: 0;">
+                                        {{this.name}}
+                                    </p>
+                                    <p class="card-text" style="margin: 0;">
+                                        {{this.author}}
+                                    </p>
+                                    <p class="card-text align-items-center d-flex" style="margin: 0;">
+                                        {{this.views}} lượt xem
+                                    </p>
+                                </div>
+                            </div>
+                            {{/each}}
+                        </div>
+                    </a>
                 </div>
                 {{/each}}
-
             </div>
-        </a>
-
+            <a class="carousel-control-prev" href="#carousel_booklist_hot" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel_booklist_hot" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </div>
 
     {{!section sách chuyên ngành}}
     <div class="content-section bg-white no-padding">
         <div class="title-section text-center">{{sectionSach.title}}</div>
-        <ul class="nav nav-pills nav-fill align-items-center" style="padding:5px">
-            {{#each sectionSach.list_categories}}
-            {{#if @first}}
-            <li class="nav-item">
-                <a class="nav-link active-modified-list-cs" href="#">
-                    {{this}}
-                </a>
-            </li>
-            {{else}}
-            <li class="nav-item">
-                <a class="nav-link text-dark" href="#">
-                    {{this}}
-                </a>
-            </li>
-            {{/if}}
-            {{/each}}
-            <li class="nav-item text-right">
-                <img src="/images/icon-more-list-field.png" alt="" style="height: 20px;">
-            </li>
-        </ul>
-        <a href="/book-detail" style="color:inherit;">
-            <div class="row justify-content-around">
+        <div id="carousel_list_specialize" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                {{#each sectionSach.list_categories}}
+                {{#if @first}}
+                <div class="carousel-item active">
+                    <ul class="nav nav-pills nav-fill align-items-center" style="padding:5px">
+                        {{#each this}}
+                        {{#if @first}}
+                        <li class="nav-item col-sm-2  ">
+                            <a class="nav-link active-modified-list-cs" href="#">
+                                {{this}}
+                            </a>
+                        </li>
+                        {{else}}
+                        <li class="nav-item col-sm-2 ">
+                            <a class="nav-link text-dark" href="#">
+                                {{this}}
+                            </a>
+                        </li>
+                        {{/if}}
+                        {{/each}}
+                    </ul>
+                </div>
+                {{else}}
+                <div class="carousel-item">
+                    <ul class="nav nav-pills nav-fill align-items-center" style="padding:5px">
+                        {{#each this}}
+                        <li class="nav-item col-sm-2 ">
+                            <a class="nav-link text-dark" href="#">
+                                {{this}}
+                            </a>
+                        </li>
+
+                        {{/each}}
+                    </ul>
+                </div>
+                {{/if}}
+                {{/each}}
+            </div>
+            <a class="carousel-control-prev" href="#carousel_list_specialize" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel_list_specialize" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        {{!Carousel book list}}
+        <div id="carousel_booklist" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
                 {{#each sectionSach.books}}
-                <div class="card" style="width: 200px; border:none;">
-                    <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
-                    <div class="card-body" style="padding:10px">
-                        <p class="card-text" style="margin: 0;">
-                            {{this.name}}
-                        </p>
-                        <p class="card-text">
-                            {{this.author}}
-                        </p>
-                    </div>
-                </div>
-                <div class="card" style="width: 200px; border:none;">
-                    <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
-                    <div class="card-body" style="padding:10px">
-                        <p class="card-text" style="margin: 0;">
-                            {{this.name}}
-                        </p>
-                        <p class="card-text">
-                            {{this.author}}
-                        </p>
-                    </div>
-                </div>
-                <div class="card" style="width: 200px; border:none;">
-                    <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
-                    <div class="card-body" style="padding:10px">
-                        <p class="card-text" style="margin: 0;">
-                            {{this.name}}
-                        </p>
-                        <p class="card-text">
-                            {{this.author}}
-                        </p>
-                    </div>
-                </div>
-                <div class="card" style="width: 200px; border:none;">
-                    <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
-                    <div class="card-body" style="padding:10px">
-                        <p class="card-text" style="margin: 0;">
-                            {{this.name}}
-                        </p>
-                        <p class="card-text">
-                            {{this.author}}
-                        </p>
-                    </div>
+                <div class="carousel-item {{#if @first}} active {{/if}} ">
+                    <a href="/book-detail" style="color: inherit;">
+                        <div class="row justify-content-around">
+                            {{#each this}}
+                            <div class="card col-md-2 col" style=" border:none;">
+                                <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
+                                <div class="card-body" style="padding:10px">
+                                    <p class="card-text" style="margin: 0;">
+                                        {{this.name}}
+                                    </p>
+                                    <p class="card-text">
+                                        {{this.author}}
+                                    </p>
+                                </div>
+                            </div>
+                            {{/each}}
+                        </div>
+                    </a>
                 </div>
                 {{/each}}
-
             </div>
-        </a>
+            <a class="carousel-control-prev" href="#carousel_booklist" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel_booklist" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
 
     </div>
 
