Xong responsive một vài trang dễ
- Gồm home, news, detail news, about, search, storage.

TODO: Còn login/signup/forget và book-detail

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="padding:0; width:95%">
     <div class="content-section first-section d-flex bg-white no-padding align-items-center">
-        <div style="padding: 10px; font-size:20px">{{content}}</div>
+        <div style="padding: 10px; font-size:20px">{{{content}}}</div>
     </div>
 </div>
 <script src="/function/change-nav.js" current_page="Giới thiệu"></script>
