--- a/views/index.hbs
+++ b/views/index.hbs
@@ -103,7 +103,7 @@
         <div class="title-section text-center">{{sectionTinTuc.title}}</div>
         <div class="row">
             <div class="col-2"></div>
-            <div class="col">
+            <div class="col-md">
                 <div class="d-flex justify-content-center">
                     {{#each sectionTinTuc.articles}}
                     {{#if @first}}
@@ -130,7 +130,7 @@
 
 
             </div>
-            <div class="col">
+            <div class="col-md">
                 <div class="d-flex justify-content-center">
                     <div>
                         <div style="color: #3498DB; font-size:25px; font-weight:bold;">{{sectionTinTuc.other_news}}
