--- a/views/news-detail.hbs
+++ b/views/news-detail.hbs
@@ -13,7 +13,7 @@
         <img class="card-img-top" src={{sectionArticles.article_image}} alt="Card image cap"
                                 style="width: 30%; height: 30%; ">
         <div class="article-detail padding-2-side-3em" style="text-align: left;">
-                    {{sectionArticles.article_para}}    
+                    {{{sectionArticles.article_para}}}    
         </div>
 
     </div>
