--- a/views/news.hbs
+++ b/views/news.hbs
@@ -14,7 +14,7 @@
         <div class="title-section text-center">{{sectionSuKien.title}}</div>
         <div class="row">
             <div class="col-2"></div>
-            <div class="col">
+            <div class="col-md">
                 <div class="d-flex justify-content-center">
                     {{#each sectionSuKien.articles}}
                     {{#if @first}}
@@ -41,7 +41,7 @@
 
 
             </div>
-            <div class="col">
+            <div class="col-md">
                 <div class="d-flex justify-content-center">
                     <div>
                         <div style="color: #3498DB; font-size:25px; font-weight:bold;">{{sectionSuKien.other_news}}
@@ -81,7 +81,7 @@
         <div class="title-section text-center">{{sectionThongBao.title}}</div>
         <div class="row">
             <div class="col-2"></div>
-            <div class="col">
+            <div class="col-md">
                 <div class="d-flex justify-content-center">
                     {{#each sectionThongBao.articles}}
                     {{#if @first}}
@@ -108,7 +108,7 @@
 
 
             </div>
-            <div class="col">
+            <div class="col-md">
                 <div class="d-flex justify-content-center">
                     <div>
                         <div style="color: #3498DB; font-size:25px; font-weight:bold;">{{sectionThongBao.other_news}}
