--- a/views/borrow.hbs
+++ b/views/borrow.hbs
@@ -10,13 +10,16 @@
         </div>
     </div>
     <div id="filter-selector">
-        <p>Ẩn những sách đã mượn</p>
+        Ẩn những sách đã mượn
     </div>
 </div>
 <hr>
 <div id = "borrow-view">
     <div class="time-title">
-    7:00
+        Ngày 22/10/2020
+    </div>
+    <div class="time-title second-title">
+        7:00
     </div>
     <div class="borrow-list">
         {{> borrow_card}}
@@ -24,6 +27,38 @@
         {{> borrow_card}}
         {{> borrow_card}}
     </div>
+    <div class="time-title second-title">
+        8:00
+    </div>
+    <div class="borrow-list">
+        {{> borrow_card}}
+        {{> borrow_card}}
+        {{> borrow_card}}
+        {{> borrow_card}}
+    </div>
+    <div class="time-title">
+        Ngày 23/10/2020
+    </div>
+    <div class="time-title second-title">
+        7:00
+    </div>
+    <div class="borrow-list">
+        {{> borrow_card}}
+        {{> borrow_card}}
+        {{> borrow_card}}
+        {{> borrow_card}}
+    </div>
+    <div class="time-title second-title">
+        12:00
+    </div>
+    <div class="borrow-list">
+        {{> borrow_card}}
+        {{> borrow_card}}
+        {{> borrow_card}}
+        {{> borrow_card}}
+    </div>
+</div>
+    
 </div>
 <script src="https://cdn.jsdelivr.net/npm/litepicker/dist/js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/litepicker-module-ranges/dist/index.js"></script>
