--- a/views/index-lib.hbs
+++ b/views/index-lib.hbs
@@ -2,10 +2,8 @@
 
 <div id="statistic" class="container-fluid block">
     <div id="stat-header" class="container-fluid block-header">
-        <h1>
-            <span>Tổng kết</span>&nbsp;
-            <span id="report-period">tháng</span>
-        </h1>
+        <span>Tổng kết</span>&nbsp;
+        <span id="report-period">tháng</span>
     </div>
     <div id="stat-subheader" class="container-fluid block-subheader">
         <span>
@@ -100,7 +98,7 @@
 <hr>
 <div id="agenda" class="container-fluid block">
     <div id="agenda-header" class="container-fluid block-header">
-        <h1>Lịch làm việc</h1>
+        <span>Lịch làm việc</span>
     </div>
     <div id="section-body" class = "block-body container-fluid">
         <div class="row justify-content-center">
