--- a/views/buy-book-manager.hbs
+++ b/views/buy-book-manager.hbs
@@ -72,4 +72,5 @@
     </div>
 </div>
 
+<link rel="stylesheet" href="/stylesheets/buy-book-manager.css">
 <script src="/function/buy-book-menu.js"></script>
