Hoàn thành responsive book-detail và vài ahref còn sót
- book-detail cài cứng khá nhiều, nên mình đã sửa nó về dạng parse data từ json để dễ cài backend sau này
- ngoài responsive, còn có cho carousel nữa.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -228,3 +228,12 @@ img {
 a {
     text-decoration: none !important;
 }
+
+.fa-star, .fa-star-half {
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: orange;
+}
+
+.fa-star:not(.star-checked){
+    color: white;
+}
