--- a/views/cart-detail.hbs
+++ b/views/cart-detail.hbs
@@ -63,11 +63,16 @@
 
         </div>
         <div class="text-center " style="padding: 0 50px;">
-            <button class="customized-btn blue-bg-white-text" style="border:none; background-color: #3498db;">Xác
-                nhận</button>
-            <button class="customized-btn white-bg-black-text" style="padding: 5px 13px;">
-                <div style="width:8ch">Hủy</div>
-            </button>
+            <a href="/carts">
+                <button class="customized-btn blue-bg-white-text" style="border:none; background-color: #3498db;">Xác
+                    nhận</button>
+            </a>
+            <a href="/carts">
+                <button class="customized-btn white-bg-black-text" style="padding: 5px 13px;">
+                    <div style="width:8ch">Hủy</div>
+                </button>
+            </a>
+
         </div>
     </div>
 </div>
