--- a/views/carts.hbs
+++ b/views/carts.hbs
@@ -22,7 +22,7 @@
                     </div>
                     <div class=" text-md-right text-center" style="font-size: 20px;">Ngày trả: {{this.return_date}}
                     </div>
-                    <a href="#">
+                    <a href="/cart-detail">
                         <div class=" text-md-right text-center" style="font-size: 20px; color:grey;">
                             <img src="/images/icon-edit.svg" alt="">
                             Sửa
@@ -44,11 +44,16 @@
             </div>
             <div class="col-md" style="padding-bottom: 20px;">
                 <div class="text-center text-md-right ">
-                    <button class="customized-btn blue-bg-white-text"
-                        style="border:none; background-color: #3498db;">Xác nhận</button>
-                    <button class="customized-btn white-bg-black-text" style="padding: 5px 13px;">
-                        <div style="width:8ch">Hủy</div>
-                    </button>
+                    <a href="/rent-book-list">
+                        <button class="customized-btn blue-bg-white-text"
+                            style="border:none; background-color: #3498db;">Xác nhận</button>
+                    </a>
+                    <a href="#">
+                        <button class="customized-btn white-bg-black-text" style="padding: 5px 13px;">
+                            <div style="width:8ch">Hủy</div>
+                        </button>
+                    </a>
+
                 </div>
 
             </div>
