--- a/views/return-book-list.hbs
+++ b/views/return-book-list.hbs
@@ -29,7 +29,7 @@
             </div>
             <div class="col-md" >
                 <div class="text-center text-md-right " style="font-weight: bold;">
-                    <a href="#">Xem các sách đã hẹn mượn</a>
+                    <a href="/rent-book-list">Xem các sách đã hẹn mượn</a>
                 </div>
             </div>
         </div>
