--- a/views/storage.hbs
+++ b/views/storage.hbs
@@ -30,7 +30,7 @@
                                         {{this.author}}
                                     </p>
                                     <p class="card-text align-items-center d-flex" style="margin: 0;">
-                                        {{this.views}} lượt xem
+                                        {{this.rates}} đánh giá
                                     </p>
                                 </div>
                             </div>
